# Image-Viewer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
assets/shaders/: fragment.glsl  vertex.glsl
bindings/: CMakeLists.txt
inc/: FrameBuffer.h  GuiManager.h  Image.h  ImageViewer.h  Shader.h  VertexArray.h  VertexBuffer.h  Window.h
src/: CMakeLists.txt  FrameBuffer.cpp  GuiManager.cpp  Image.cpp  ImageViewer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main.cpp
test_package/: conanfile.py
